...
    FirefoxSync,
    ProtectionAndData,
    AboutLegal,
}

internal object AppearanceSettingsTestTags {
    const val AppearanceMode = "appearance_settings_mode"
    const val ForceDarkWebsites = "appearance_settings_force_dark_websites"
    const val ColorPalette = "appearance_settings_palette"
    const val SurfaceStyle = "appearance_settings_surface"
    const val ShapeStyle = "appearance_settings_shape"
    const val FrostedTransparency = "appearance_settings_frosted_transparency"
    const val FrostedAddressBarTransparency =
        "appearance_settings_frosted_address_bar_transparency"
    const val FrostedBlur = "appearance_settings_frosted_blur"
}

internal object ProtectionSettingsTestTags {
    const val UserCaWarning = "protection_settings_user_ca_warning"
    const val ExportAppData = "protection_settings_export_app_data"
    const val ImportAppData = "protection_settings_import_app_data"
...
